html of medium with figure

--- a/test_medium.html
+++ b/test_medium.html
@@ -446,6 +446,16 @@ head(table_as_matrix, 4)</code></pre>
 
 </div>
 
+
+<h2>Why was this all about?</h2> 
+<p> Here you can see finally how a single reaction from the network we had, can be seen in the first line of our matrix. One molecule of f6p_c and one atp_c are cosnumed to produce one of adp_c, one of h_c and one of fdp_c. </p>
+
+<div class="figure">
+  <img src="https://raw.githubusercontent.com/hariszaf/gsoc2020/master/test_medium_files/figure-html/gsoc2020_reactions.png"/>
+  <p class="caption">siga kai mi</p>
+</div>
+
+
 <script>
 
 // add bootstrap table styles to pandoc tables
